js fixes and pixel perfect

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cat pinterest</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -18,10 +16,10 @@
         <nav class="navbar">
             <ul class="navbar-menu">
                 <li class="navbar-item">
-                    <a href="#" id = "all_cats" class="navbar-link" >Все котики</a>
+                    <a href="#" id = "all_link" class="navbar-link" >Все котики</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#" id = "fav_cats" class="navbar-link">Любимые котики</a>
+                    <a href="#" id = "fav_link" class="navbar-link">Любимые котики</a>
                 </li>
             </ul>
         </nav>
